--- a/source/R5T.Lombardy.Gepidia.Construction/R5T.Lombardy.Gepidia.Construction.csproj
+++ b/source/R5T.Lombardy.Gepidia.Construction/R5T.Lombardy.Gepidia.Construction.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
     <ProjectReference Include="..\R5T.Lombardy.Gepidia\R5T.Lombardy.Gepidia.csproj" />
   </ItemGroup>
